Ingress/03-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-app-service  # Name of the service
spec:
  selector:
    app: user-app  # Label selector to target pods with this label
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
  type: ClusterIP  # Type of service (other options include ClusterIP, LoadBalancer, etc.)
