Ingress/04-product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-app-service  # Name of the service
spec:
  selector:
    app: product-app  # Label selector to target pods with this label
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  type: ClusterIP  # Type of service (other options include ClusterIP, LoadBalancer, etc.)
