Ingress/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /swagger/index.html
spec:
  ingressClassName: nginx
  rules:
  #- host: ingress.demo.com
   - http:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-app-service
            port:
              number: 8081
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-app-service
            port:
              number: 8082
